# cryptojacking-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: cryptojacking_true.csv  detected.txt  targets.csv  targets_detected.csv  wallet_example.txt  wallets_verified.csv
log/: run_docker_scraper.txt
rules/: mining_rules.yar  wallet_rules.yar
src/: docker_scraper.py  detect_cryptojacking.py  detected_image_search.py  docker_official_image_scraper.py  docker_scraper.py  validate_wallets.py
